# openedx-index-mcp

./: Dockerfile  README.md  clone_openedx.sh  docker-compose.yml  pyproject.toml
src/openedx_index_mcp/: __init__.py  server.py  settings.py
src/openedx_index_mcp/services/: bootstrap.py  docs_index.py
src/openedx_index_mcp/tools/: __init__.py  docs.py  index.py  openedx.py  search.py  symbols.py
